new column added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="hero-section">
  <img src="img/hero.jpg" alt="main_image">
  </div>
-<!--3 column table implemented using 960 grid-->
+<!--3 column table implemented (using 960 grid)-->
 <div class="row container_12">
   <div class="column left grid_4" >
    <img src="img/Nile_River.jpg" alt="nile_river">
@@ -56,7 +56,7 @@
    
    </div>
 </div><br>
-<!--Descriptions of images in column table-->
+<!--Descriptions of images in column table (using 960 grid)-->
 <div class="row container_12">
   <div class="column left grid_4" >
    <h2>River Nile</h2>
@@ -87,6 +87,97 @@
   
 
 </div>
+<!--begining of 2 column with right column divided into 3 rows(using 960 grid)(1)-->
+<div class="container_12"><hr></div>
+<div class ="container_12">
+	<div class="grid_3">
+
+		<div class="left_t container_6">
+			<h2>Nile<h2>
+		</div>
+	</div>
+	<div class="grid_9">
+		<div class="right_t container_3">
+			<h3>Cities</h3>	
+			<p>Jinja, Juba, Khartoum, Cairo</p>
+		</div>
+		<div class ="right_t container_3">
+			<h3>Source</h3>
+          	<p> The source of the Nile is sometimes considered to be Lake Victoria, but the lake has feeder rivers of considerable size.
+            </p>
+		</div>
+		<div class="right_t container_3">
+        <h3>History</h3>
+
+
+			<p>
+			Reconstruction of the Oikoumene (inhabited world), an ancient map based on Herodotus' description of the world, circa 450 BC
+			The Nile (iteru in Ancient Egyptian) has been the lifeline of civilization in Egypt since the Stone Age, with most of the population and all of the cities of Egypt resting along those parts of the Nile valley lying north of Aswan. However, the Nile used to run much more westerly through what is now Wadi Hamim and Wadi al Maqar in Libya and flow into the Gulf of Sidra. As sea level rose at the end of the most recent ice age, the stream which is now the northern Nile pirated the ancestral Nile near Asyut, this change in climate also led to the creation of the current Sahara desert, around 3400 BC.
+			</p>
+		</div>
+	</div>
+<hr>
+
+</div>
+<!--end of 2 column with right column divided into 3 rows(using 960 grid)(1)-->
+<!--begining of 2 column with right column divided into 3 rows(2)-->
+<div class ="container_12">
+	<div class="grid_3">
+		<div class="left_t container_6">
+			<h2>Mississippi</h2>
+		</div>
+	</div>
+	<div class="grid_9">
+		<div class="right_t container_3">
+		<h3>Cities</h3>
+           <p>
+        	Saint Cloud, MN, Minneapolis, MN, St. Paul, MN, La Crosse, WI, Quad Cities, IA/IL, St. Louis, MO, Memphis, TN, Baton Rouge, LA, New Orleans, LA
+           </p>
+        </div>
+		<div class ="right_t container_3">
+		<h3>Source</h3>
+			<p>The source of the Upper Mississippi branch is traditionally accepted as Lake Itasca, 1,475 feet (450 m) above sea level in Itasca State Park in Clearwater County, Minnesota.</p> 
+		</div>
+		<div class="right_t container_3">
+			<h3>History</h3>
+
+
+			<p>
+			The area of the Mississippi River basin was first settled by hunting and gathering Native American peoples and is considered one of the few independent centers of plant domestication in human history.Evidence of early cultivation of sunflower, a goosefoot, a marsh elder and an indigenous squash dates to the 4th millennium BCE. The lifestyle gradually became more settled after around 1000 BCE during what is now called the Woodland period, with increasing evidence of shelter construction, pottery, weaving and other practices. A network of trade routes referred to as the Hopewell interaction sphere was active along the waterways between about 200 and 500 CE, spreading common cultural practices over the entire area between the Gulf of Mexico and the Great Lakes.
+			</p>
+		</div>
+	</div>
+<hr>
+
+</div>
+<!--end of 2 column with right column divided into 3 rows(using 960 grid)(2)-->
+<!--begining of 2 column with right column divided into 3 rows(3)-->
+<div class ="container_12">
+	<div class="grid_3">
+		<div class="left_t container_6">
+			<h2>Amazon</h2>
+		</div>
+	</div>
+	<div class="grid_9">
+		<div class="right_t container_3"><h3>Cities</h3>	
+			<p>City	Iquitos, Leticia,
+Tabatinga , Tefé,Itacoatiara, Parintins,Óbidos, Santarém, Almeirim, Macapá,Manaus 
+</p></div>
+		<div class ="right_t container_3">
+		<h3>Source</h3>
+			<p>The most distant source of the Amazon was thought to be in the Apurímac river drainage for nearly a century. Such studies continued to be published even recently, such as in 1996,[36] 2001,[37] 2007,[7] and 2008,[9] where various authors identified the snowcapped 5,597 m (18,363 ft) Nevado Mismi peak, located roughly 160 km (99 mi) west of Lake Titicaca and 700 km (430 mi) southeast of Lima, as the most distant source of the river.</p></div>
+		<div class="right_t container_3">
+		<h3>History</h3>
+			<p>ring what many archaeologists call the formative stage, Amazonian societies were deeply involved in the emergence of South America's highland agrarian systems. The trade with Andean civilisations in the terrains of the headwaters in the Andes, formed an essential contribution to the social and religious development of the higher altitude civilisations of among others the Muisca and Incas. Early human settlements were typically based on low-lying hills or mounds
+			
+		</p></div>
+	</div>
+
+
+</div>
+<!--end of 2 column with right column divided into 3 rows(3)-->
+
+
 <!--footer with social links-->
  <footer class="foot container_12">
  
